# serializer version: 1
# name: test_battery_status[1]
  KamereonVehicleBatteryStatusData(
    V2L_SystemStatusDisplay=None,
    batteryAutonomy=128,
    batteryAvailableEnergy=0,
    batteryCapacity=0,
    batteryLevel=50,
    batteryTemperature=None,
    chargingInstantaneousPower=None,
    chargingRemainingTime=None,
    chargingRemainingTimeLastUpdateDateTime=None,
    chargingStatus=-1.0,
    plugStatus=0,
    raw_data=dict({
      'batteryAutonomy': 128,
      'batteryAvailableEnergy': 0,
      'batteryCapacity': 0,
      'batteryLevel': 50,
      'chargingStatus': -1.0,
      'plugStatus': 0,
      'timestamp': '2020-11-17T09:06:48+01:00',
    }),
    timestamp='2020-11-17T09:06:48+01:00',
  )
# ---
# name: test_battery_status[2]
  KamereonVehicleBatteryStatusData(
    V2L_SystemStatusDisplay=None,
    batteryAutonomy=141,
    batteryAvailableEnergy=31,
    batteryCapacity=0,
    batteryLevel=60,
    batteryTemperature=20,
    chargingInstantaneousPower=27.0,
    chargingRemainingTime=145,
    chargingRemainingTimeLastUpdateDateTime=None,
    chargingStatus=1.0,
    plugStatus=1,
    raw_data=dict({
      'batteryAutonomy': 141,
      'batteryAvailableEnergy': 31,
      'batteryCapacity': 0,
      'batteryLevel': 60,
      'batteryTemperature': 20,
      'chargingInstantaneousPower': 27.0,
      'chargingRemainingTime': 145,
      'chargingStatus': 1.0,
      'plugStatus': 1,
      'timestamp': '2020-01-12T21:40:16Z',
    }),
    timestamp='2020-01-12T21:40:16Z',
  )
# ---
# name: test_battery_status[renault_5]
  KamereonVehicleBatteryStatusData(
    V2L_SystemStatusDisplay=0,
    batteryAutonomy=169,
    batteryAvailableEnergy=None,
    batteryCapacity=None,
    batteryLevel=49,
    batteryTemperature=None,
    chargingInstantaneousPower=None,
    chargingRemainingTime=0,
    chargingRemainingTimeLastUpdateDateTime=None,
    chargingStatus=0.0,
    plugStatus=0,
    raw_data=dict({
      'V2L_SystemStatusDisplay': 0,
      'batteryAutonomy': 169,
      'batteryLevel': 49,
      'chargingRemainingTime': 0,
      'chargingStatus': 0.0,
      'plugStatus': 0,
      'timestamp': '2025-03-24T19:03:58Z',
    }),
    timestamp='2025-03-24T19:03:58Z',
  )
# ---
# name: test_battery_status[renault_5_2]
  KamereonVehicleBatteryStatusData(
    V2L_SystemStatusDisplay=0,
    batteryAutonomy=261,
    batteryAvailableEnergy=None,
    batteryCapacity=None,
    batteryLevel=73,
    batteryTemperature=None,
    chargingInstantaneousPower=None,
    chargingRemainingTime=3,
    chargingRemainingTimeLastUpdateDateTime='2026-04-30T16:16:10Z',
    chargingStatus=0.0,
    plugStatus=0,
    raw_data=dict({
      'V2L_SystemStatusDisplay': 0,
      'batteryAutonomy': 261,
      'batteryLevel': 73,
      'chargingRemainingTime': 3,
      'chargingRemainingTimeLastUpdateDateTime': '2026-04-30T16:16:10Z',
      'chargingStatus': 0.0,
      'plugStatus': 0,
      'timestamp': '2026-05-01T06:07:54Z',
    }),
    timestamp='2026-05-01T06:07:54Z',
  )
# ---
# name: test_hvac_status[renault_5]
  KamereonVehicleHvacStatusData(
    externalTemperature=None,
    hvacStatus='off',
    internalTemperature=15.0,
    lastUpdateTime='2025-03-24T18:57:22Z',
    nextHvacStartDate=None,
    raw_data=dict({
      'hvacStatus': 'off',
      'internalTemperature': 15.0,
      'lastUpdateTime': '2025-03-24T18:57:22Z',
      'socThreshold': 15.0,
    }),
    socThreshold=15.0,
  )
# ---
# name: test_hvac_status[renault_5_2]
  KamereonVehicleHvacStatusData(
    externalTemperature=None,
    hvacStatus='off',
    internalTemperature=None,
    lastUpdateTime='2026-05-01T05:26:06Z',
    nextHvacStartDate=None,
    raw_data=dict({
      'hvacStatus': 'off',
      'lastUpdateTime': '2026-05-01T05:26:06Z',
      'socThreshold': 15.0,
    }),
    socThreshold=15.0,
  )
# ---
# name: test_hvac_status[spring]
  KamereonVehicleHvacStatusData(
    externalTemperature=None,
    hvacStatus='off',
    internalTemperature=None,
    lastUpdateTime='2020-12-03T00:00:00Z',
    nextHvacStartDate=None,
    raw_data=dict({
      'hvacStatus': 'off',
      'lastUpdateTime': '2020-12-03T00:00:00Z',
      'socThreshold': 30.0,
    }),
    socThreshold=30.0,
  )
# ---
# name: test_hvac_status[zoe]
  KamereonVehicleHvacStatusData(
    externalTemperature=8.0,
    hvacStatus='off',
    internalTemperature=None,
    lastUpdateTime=None,
    nextHvacStartDate=None,
    raw_data=dict({
      'externalTemperature': 8.0,
      'hvacStatus': 'off',
    }),
    socThreshold=None,
  )
# ---
# name: test_hvac_status[zoe_50]
  KamereonVehicleHvacStatusData(
    externalTemperature=None,
    hvacStatus='on',
    internalTemperature=None,
    lastUpdateTime=None,
    nextHvacStartDate=None,
    raw_data=dict({
      'hvacStatus': 'on',
      'socThreshold': 40,
    }),
    socThreshold=40.0,
  )
# ---
